Swedish/Latin sorted into order, added lang=fr to IPA, rm tag <mandat#5071553>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -4,9 +4,9 @@
 From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands, to command", from Proto-Indo-European ''*man-'' "hand" + ''*dhē-'' "put".
 
 ===Pronunciation===
-*{{audio|Fr-mandat.ogg|audio}}
-* {{IPA|/mãˈda/}}, {{SAMPA|/ma~"da/}}
-*'''Hyphenation:''' man·dat
+* {{audio|Fr-mandat.ogg|audio}}
+* {{IPA|/mãˈda/|lang=fr}}, {{SAMPA|/ma~"da/}}
+* '''Hyphenation:''' man·dat
 
 ===Noun===
 '''mandat''' ''m''
@@ -14,6 +14,15 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 # [[mandate]]
 
 [[Category:French nouns]]
+
+----
+
+==Latin==
+
+===Verb===
+{{la-verb-form|mandat}}
+
+# {{conjugation of|[[mando#Latin|mandō]]||3|s|pres|act|ind}}
 
 ----
 
@@ -38,12 +47,3 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 [[fi:mandat]]
 [[tt:mandat]]
 [[vi:mandat]]
-
-----
-==Latin==
-===Verb===
-{{la-verb-form|mandat}}
-
-# {{conjugation of|[[mando#Latin|mandō]]||3|s|pres|act|ind}}
-
-{{rfc-auto}}
