/* Translations */ move "bedon" <stomach#5071730>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -76,7 +76,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Czech: {{t-|cs|břicho|n}}
 * Dutch: {{t+|nl|buik}}
 * Finnish: {{t+|fi|maha}}
-* French: {{t+|fr|bedon|m}}, {{t+|fr|ventre|m}}
+* French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
 * German: {{t+|de|Bauch|m}}
 * Hebrew: {{t-|he|בטן|f|sc=Hebr}}
 * Hindi: [[पेट]] (pēṭa) {{m}}
