--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -38,14 +38,20 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 # {{diplomacy}} A statement, such as an [[offer]], that signals a possibility of accord.
 
 =====Derived terms=====
+{{top}}
 * [[bridge mount]]
+* [[bridge over troubled waters]]
+* [[cross that bridge when one comes to it]]
+* [[bridge the gap]]
 * [[land bridge]]
 * [[Maryland bridge]]
+{{mid}}
 * [[water under the bridge]]
 * [[Wheatstone bridge]]
 * [[Kelvin bridge]]
 * [[Schering bridge]]
 * [[Wien bridge]]
+{{bottom}}
 
 =====Translations=====
 {{trans-top|construction or natural feature that spans a divide}}
