iwiki +kk <cost#5080190>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -95,6 +95,7 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 [[io:cost]]
 [[id:cost]]
 [[it:cost]]
+[[kk:cost]]
 [[lt:cost]]
 [[hu:cost]]
 [[nl:cost]]
