--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -26,8 +26,9 @@ from {{etyl|gem}} *{{term||kut-|lang=gem}} (Cf. Norwegian [[kutte]]), or from {{
 ====Translations====
 {{trans-top|having been cut}}
 * Danish: {{t+|da|skære|alt=skåret}}
+* Dutch: {{t+|nl|snijden|alt=gesneden}}
 * Finnish: {{t-|fi|leikattu}}
-* French: {{t+|fr|coupé}}, {{t+|fr|coupée}}
+* French: {{t+|fr|coupé}}, {{t+|fr|coupée}}, {{t+|fr|coupés}}, {{t+|fr|coupées}}
 {{trans-mid}}
 * German: {{t+|de|geschnitten}}
 * Hebrew: [[חתוך]] (khatukh) {{m}}, [[חתוכה]] (khatukha) {{f}}
