--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -51,7 +51,7 @@
 
 ====Translations====
 {{trans-top|hardened block used for building}}
-* {{trreq|Armenian}}
+* Armenian: [[աղյուս]] (aġyus)
 * [[Basque]]: [[adreilu]]
 * Bosnian: {{t|bs|cigla|f}}
 * Bulgarian: {{t+|bg|тухла|sc=Cyrl}}
