--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -26,4 +26,5 @@ Derived from [[масло]] ('butter', 'oil'). Cf. French [[mardi gras]].
 [[Category:Russian nouns]]
 
 [[fr:масленица]]
+[[ru:масленица]]
 [[vi:масленица]]
