Reverted edits by [[Special:Contributions/96.225.144.80|96.225.144.80]] ([[User_talk:96.225.144.80|Talk]]); changed back to last version by [[User:Interwicket|Interwicket]] <beautiful#5116761>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,7 +13,7 @@
 ===Adjective===
 {{en-adj}}
 
-# possessing charm and attractive example- miss molly is the most "beautiful" girl I have ever seen
+# possessing charm and attractive
 #: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
 # {{context|of the weather}} pleasant; clear.
 # well executed
