--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -3,7 +3,7 @@
 
 ===Pronunciation===
 * {{audio|en-us-coat.ogg|Audio (US)}}
-*: Rhymes: [[Rhymes:English:-əʊt|-əʊt]]
+*: {{rhymes|əʊt}}
 
 ===Noun===
 {{en-noun|s|-}}
@@ -30,8 +30,8 @@
 * German: {{t+|de|Mantel|m}}
 * Greek: {{t+|el|πανωφόρι|n|tr=panofori|sc=Grek}}, {{t+|el|παλτό|n|tr=palto|sc=Grek}}
 * Indonesian: {{t+|id|mantel|xs=Indonesian}}
-* Italian: {{t+|it|mantello|m}}
 {{trans-mid}}
+* Italian: {{t+|it|mantello|m}}
 * Japanese: [[コート]] (kōto), [[外套]] ([[がいとう]], gaitō)
 * Portuguese: {{t+|pt|casaco|m}}
 * Russian: [[пальто]] (pal’tó) {{n}}, [[пиджак]] (pidžák) {{m}}
