--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -86,6 +86,7 @@ Often abbreviated ''etc.'' or ''&c''. ''[[Ampersand]]'' (''[[&]]'') comes from t
 
 [[Category:Latin phrases]]
 
+[[cs:et cetera]]
 [[da:et cetera]]
 [[fr:et cetera]]
 [[ko:et cetera]]
