iwiki +cs <fight#5134383>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -314,6 +314,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 [[Category:English irregular verbs]]
 
 [[ar:fight]]
+[[cs:fight]]
 [[de:fight]]
 [[el:fight]]
 [[es:fight]]
