--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -1,4 +1,4 @@
-{{see|伞}}
+{{also|伞}}
 ==Translingual==
 
 ===Han character===
@@ -92,6 +92,7 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 '''傘''' ([[tản]], [[tàn]], [[tán]])
 
