--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -1,5 +1,5 @@
-{{see|栗}} (different character in Japan)
 * '''Alternate font''': [[慄]]
+{{also|栗}} (different character in Japan)
 ==Translingual==
 
 ===Han character===
