+hyphenation template <beautiful#5145351>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -8,7 +8,7 @@
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
 * {{audio|en-us-beautiful.ogg|Audio (US)}}
-* Hyphenation: beau&middot;ti&middot;ful
+* {{hyphenation|beau&middot;ti&middot;ful}}
 
 ===Adjective===
 {{en-adj}}
