/* Derived terms */ created collapsible box and added [[play dumb]] and [[playhouse]] <play#5153391>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -316,7 +316,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-bottom}}
 
 ===Derived terms===
-{{top2}}
+{{rel-top3|Terms derived from the noun or verb "play"}}
 * [[airplay]]
 * [[downplay]]
 * [[fair play]]
@@ -332,13 +332,15 @@ Old English ''[[pleġa]]'', ''plæġa''
 * [[play dead]]
 * [[play doctor]]
 * [[playdough]]
+{{rel-mid3}}
 * [[play down]]
+* [[play dumb]]
 * [[player]]
 * [[playful]]
 * [[play games]]
 * [[playground]]
 * [[play house]]
-{{mid2}}
+* [[playhouse]]
 * [[play lunch]]
 * [[playmate]]
 * [[play money]]
@@ -346,6 +348,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * [[playout]]
 * [[playpen]]
 * [[playroom]]
+{{rel-mid3}}
 * [[playschool]]
 * [[play the field]]
 * [[plaything]]
@@ -360,7 +363,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * [[two can play that game]]
 * [[war play]]
 * [[word play]]
-{{bottom}}
+{{rel-bottom}}
 
 [[Category:1000 English basic words]]
 [[Category:English ergative verbs]]
