template -see +also <旧#5153672>

--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -1,4 +1,4 @@
-{{see|舊}}
+{{also|舊}}
 ==Translingual==
 
 ===Han character===
@@ -22,17 +22,22 @@
 ----
 
 ==Japanese==
+
 ===Noun===
 {{ja-noun|k|hira=きゅう|rom=kyū}}
+
 # [[old]] things, original state, former state, old times
 # the old calendar based on a lunar system
 {{ja-noun|k|hira=ふる|rom=furu}}
 # [[used]] item, [[secondhand]] item
+
 ===Prefix===
 {{ja-pos|k|prefix|hira=きゅう|rom=kyū}}
+
 # [[ex-]]
 {{ja-pos|k|prefix|hira=ふる|rom=furu}}
 # [[old]], [[used]], [[previous]]
+
 ===Kanji===
 {{ja-kanji|grade=5|rs=日01}}
 
@@ -40,6 +45,7 @@
 
 ====Readings====
 * {{ja-readings|on=[[きゅう]] (''kyū'')|kun=[[ふるい]] ([[旧い]], ''furui''), [[もと]] (''moto'')}}
+
 ====Compounds====
 {{top2}}
 * [[旧式]] (''kyūshiki''): old type
@@ -62,6 +68,7 @@
 * [[復旧する]] (''fukkyū suru''): recover
 * [[旧に復する]] (''kyū ni fukusuru''): be restored to a former state
 {{bottom2}}
+
 ----
 
 ==Korean==
@@ -76,7 +83,7 @@
 ==Mandarin==
 
 ===Pronunciation===
-*{{audio|zh-jiù.ogg|audio}}
+* {{audio|zh-jiù.ogg|audio}}
 
 ===Hanzi===
 {{cmn-hanzi|tra=舊|pin=[[jiù]] ([[jiu4]])|wg=[[chiu4|chiu<sup>4</sup>]]}}
