--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -77,9 +77,7 @@
 # {{transitive}} To make small gradual changes, usually in a particular direction.
 #: ''Prices have been '''creeping''' up all year.''
 
-Ashlyn  Holland,
-this girl is really creepy. If you go to Emmanuel College you would really know. She likes to stalk people around school and on facebook. Beware of her creepyness
-[[Image:http://a930.ac-images.myspacecdn.com/images01/27/l_a87dc6040f4b81ba58a766700cd0d641.jpg]]====Synonyms====
+====Synonyms====
 * {{i-c|move slowly with the abdomen close to the ground}} [[crawl]]
 * {{i-c|grow across a surface rather than upwards}}
 * {{i-c|move slowly and quietly in a particular direction}}
