convert OE. to etyl|ang <creep#5157041>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{OE.}} ''[[crēopan]]''
+{{etyl|ang}} ''[[crēopan]]''
 
 ===Pronunciation===
 * {{enPR|krēp}}, {{IPA|/kriːp/}}, {{SAMPA|/kri:p/}}
