/* English */ format etymology and pronunciation <choose#5157599>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -2,13 +2,13 @@
 {{wikipedia|Choice}}
 
 ===Etymology===
-From Old English [[ceosan|ċēosan]].
+From {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
 
 ===Pronunciation===
 * {{enPR|cho͞oz}}, {{IPA|/tʃuːz/}}, {{SAMPA|/tSu:z/}}
-* {{audio|en-us-choose.ogg|Audio (US)}}
-*: '''Homophones''': [[chew]]s
-*: [[Rhymes:English:-uːz|Rhymes: -uːz]]
+*: {{audio|en-us-choose.ogg|Audio (US)}}
+*: [[Rhymes:English:-uːz|Rhymes:-uːz]]
+* {{homophones|chews}}
 
 ===Verb===
 {{en-verb|chooses|choosing|chose|chosen}}
