--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -2,9 +2,9 @@
 ==English==
 
 ===Pronunciation===
-* {{UK}} {{enPR|chōz}}, {{IPA|/tʃəʊz/}}, {{SAMPA|/tS@Uz/}}
+* {{a|UK}} {{enPR|chōz}}, {{IPA|/tʃəʊz/}}, {{SAMPA|/tS@Uz/}}
 *: {{rhymes|əʊz}}
-* {{US}} {{enPR|chōz}}, {{IPA|/tʃoʊz/}}, {{SAMPA|/tSoUz/}}
+* {{a|US}} {{enPR|chōz}}, {{IPA|/tʃoʊz/}}, {{SAMPA|/tSoUz/}}
 *: {{audio|en-us-chose.ogg|Audio (US)}}
 *: {{rhymes|oʊz}}
 
