--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -7,7 +7,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{wikipedia}}
 * {{enPR|plŭm}}, {{IPA|/plʌm/}}, {{SAMPA|/plVm/}}
 * {{audio|en-us-plum.ogg|Audio (US)}}
-*: Rhymes: [[Rhymes:English:-ʌm|-ʌm]]
+*: {{rhymes|ʌm}}
 *: '''Homophones''': [[plumb]]
 
 ===Noun===
