--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -18,6 +18,12 @@
 # {{defn|Cantonese}}
 
 ----
+音節
+(香港語言學學會) 
+粵音: wun4 
+根據:黃,周,李,何
+同音字: 羦, 萑, 荁 [ 相關音節 ]
+詞例(解釋) / 備註 :城垣, 頹垣斷壁, 泥垣宮(頭頂前部)
 
 ==Japanese==
 
