convert F. to etyl|fr <France#5174546>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -4,7 +4,7 @@
 {{rank|mine|wild|front|576|France|London|save|length}}
 
 ===Etymology===
-From {{F.}} {{term|France|lang=fr}}.
+From {{etyl|fr}} {{term|France|lang=fr}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈfɹɑːns/}}
