--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -1,11 +1,11 @@
-{{see|pēn|pén|pěn|pèn}}
+{{also|pēn|pén|pěn|pèn}}
 ==English==
 
 ===Pronunciation===
 * {{IPA|/pɛn/}}, {{SAMPA|/pEn/}}
 * {{audio|en-us-pen.ogg|Audio (US)}}
 * {{audio|en-us-inlandnorth-pen.ogg|Audio (US-Inland North)}}
-* Rhymes: [[Rhymes:English:-ɛn|-ɛn]]
+* {{rhymes|ɛn}}
 
 ===Etymology 1===
 Origin uncertain, perhaps related to ''[[pin]]''.
@@ -57,7 +57,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 ===Etymology 2===
 [[Image:Ballpoint-pen-parts.jpg|thumb|right|A ballpoint pen, showing assembly.]]
-{{AF.}} ''[[penne]]'', from {{OF.}} ''[[penne]]'', from {{L.}} ''[[penna]]'' ‘feather’.
+{{AF.}} ''[[penne]]'', from {{etyl|fro}} ''[[penne]]'', from {{etyl|la}} ''[[penna]]'' ‘feather’.
 
 ====Noun====
 {{en-noun}}
@@ -177,8 +177,7 @@ Shortned form of ''[[penalty]]''
 ==Dutch==
 
 ===Pronunciation===
-* {{IPA|/pεn/}}
-* [[w:SAMPA|SAMPA]]: /pEn/
+* {{IPA|/pεn/|lang=nl}}, {{SAMPA|/pEn/}}
 
 ===Noun===
 '''pen''' ''m''
