(UK) to {{a|UK}}, (US) to {{a|US}}, +rhymes template, sorted prolog, template -See +also, trans link [[Bavarian]] <butter#5184937>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,5 +1,5 @@
-{{See|Butter}}
 [[Image:NCI butter.jpg|thumb|right|250 px|Butter (1) [[stick]] with a butter [[knife]].]]
+{{also|Butter}}
 ==English==
 {{wikipedia}}
 
@@ -7,10 +7,10 @@
 Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' < Greek '''{{polytonic|[[βούτυρον]]}}''' ''boutyron'' (perhaps literally ‘cow-cheese’, from '''{{polytonic|[[βούς]]}}''' ''bous'' ‘ox, cow’ + '''{{polytonic|[[τυρός]]}}''' ''tyros'' ‘cheese’).  The West Germanic source also gave Dutch ''[[boter]]'', German ''[[Butter]]''.
 
 ===Pronunciation===
-* (''UK''): {{IPA|/ˈbʌtə/}}, {{SAMPA|/"bVt.@/}}
-* (''US''): {{enPR|bŭtʹər}}, {{IPA|/ˈbʌɾ.ɚ/}}, {{SAMPA|/"bV4.@`/}}
+* {{a|UK}} {{IPA|/ˈbʌtə/}}, {{SAMPA|/"bVt.@/}}
+* {{a|US}} {{enPR|bŭtʹər}}, {{IPA|/ˈbʌɾ.ɚ/}}, {{SAMPA|/"bV4.@`/}}
 *: {{audio|en-us-butter.ogg|Audio (US)}}
-*: Rhymes: [[Rhymes:English:-ʌtə(r)|-ʌtə(r)]]
+*: {{rhymes|ʌtə(r)}}
 
 ===Noun===
 {{en-noun|-|pl2=butters}}
@@ -177,7 +177,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 ====Translations====
 {{trans-top|soft foodstuff made from milk}}
 * Arabic: {{Arab|[[زبدة]]}} (zúbda) {{f}}
-* Bavarian: [[Budda]] {{m}}
+* [[Bavarian]]: [[Budda]] {{m}}
 * [[Breton]]: [[amanenn]] {{m}}
 * Bulgarian: {{t-|bg|масло|n|tr=máslo|sc=Cyrl}}
 * [[Catalan]]: [[mantega]] {{f}}
