--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -63,7 +63,7 @@
 * [[傘寿]]
 * [[傘地]]
 * [[傘伐林]]
-* [[雨傘]]
+* {{term|雨傘||umbrella|tr=あまがさ, amagasa|sc=Jpan|lang=ja}}
 
 [[Category:1000 Japanese basic words|かさ]]
 
