--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -4,7 +4,7 @@
 From the root {{term|ש-ב-ע||sc=Hebr|tr=sh-v-`}}.
 
 ===Pronunciation===
-* {{a|Modern Hebrew}} {{IPA|/ʃaˈvua(ʕ)/}}
+* {{a|Modern Hebrew}} {{IPA|/ʃaˈvua(ʕ)/|lang=he}}
 
 ===Noun===
 {{he-noun|g=m|pl=שבועות|tr=shav&uacute;a`}}
