--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -1,4 +1,4 @@
-{{see|阬}}
+{{also|阬}}
 ==Translingual==
 
 ===Han character===
@@ -66,6 +66,7 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 '''坑''' ([[khanh]], [[ganh]])
 
