--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -76,6 +76,7 @@ From {{etyl|la|es}} {{term|liber|lang=la}}
 * [[libérrimo]]
 * [[libremente]]
 
+[[cs:libre]]
 [[de:libre]]
 [[et:libre]]
 [[el:libre]]
@@ -87,6 +88,7 @@ From {{etyl|la|es}} {{term|liber|lang=la}}
 [[ie:libre]]
 [[it:libre]]
 [[hu:libre]]
+[[no:libre]]
 [[oc:libre]]
 [[pl:libre]]
 [[ru:libre]]
