--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -1,4 +1,4 @@
-{{see|仮}}
+{{also|仮}}
 ==Translingual==
 
 ===Han character===
@@ -54,6 +54,7 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 '''假''' ([[giả]], [[giá]], [[hạ]])
 
