template update, Replaced: {{law}} → {{legal}}  using [[Project:AutoWikiBrowser|AWB]] <count#5208270>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -14,7 +14,7 @@ From {{OF.}} {{term|conter||add up; tell a story}}.
 
 # The result of a [[tally]] that reveals the [[number]] of items in a set; a [[quantity]] [[counted]].
 # A [[countdown]].
-# {{law}} A [[charge]] of misconduct brought in a [[legal]] proceeding.
+# {{legal}} A [[charge]] of misconduct brought in a [[legal]] proceeding.
 
 =====Translations=====
 {{trans-top|the result of a tally that reveals the number of items in a set}}
