/* Translations */ reform el <come#5209870>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -68,7 +68,7 @@
 * Finnish: [[tulla]]
 * French: [[venir]]
 * German: [[kommen]]
-* Greek: [[έρχομαι]] (érkhomai)
+* Greek: {{t|el|έρχομαι|tr=érchomai|sc=Grek}}
 * Hebrew: [[לבוא]] (lavó)
 * Hindi: [[आना]] (ānā)
 * Hungarian: [[jön]]
