--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -1,11 +1,11 @@
-{{also|Côme}}
 {{wikipedia}}
+{{also|Côme}}
 ==English==
 
 {{rank|old|came|men|107|come|without|make|def}}
 
 ===Etymology===
-{{OE.}} {{term|cuman|lang=ang}} from {{proto|Indo-European|gʷem-|lang=grc}}. Cognates include Sanskrit {{term|sc=Deva|गच्छति|tr=gácchati|lang=sa}}, Ancient Greek {{term|sc=polytonic|βαίνω|tr=bainō|lang=grc}}, Latin {{term|venio|veniō|lang=la}}, German {{term|kommen|lang=de}}, Swedish {{term|komma|lang=sv}}.
+{{etyl|ang}} {{term|cuman|lang=ang}} from {{proto|Indo-European|gʷem-|lang=grc}}. Cognates include Sanskrit {{term|sc=Deva|गच्छति|tr=gácchati|lang=sa}}, Ancient Greek {{term|sc=polytonic|βαίνω|tr=bainō|lang=grc}}, Latin {{term|venio|veniō|lang=la}}, German {{term|kommen|lang=de}}, Swedish {{term|komma|lang=sv}}.
 
 ===Pronunciation===
 * {{enPR|kŭm}}, {{IPA|/kʌm/}}, {{SAMPA|/kVm/}}
@@ -128,7 +128,6 @@
 * [[cam'st]]
 * [[kingdom come]]
 
-
 ===Noun===
 {{en-noun|-}} (also [[cum]])
 
@@ -143,7 +142,6 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 # when an event has occurred or a time has arrived
 #: ''Leave it to settle for about three months and, '''come''' Christmas time, you'll have a delicious concoctions to offer your guests.''
 
-
 [[Category:English homophones]]
 [[Category:English irregular past participles]]
 [[Category:English irregular verbs]]
@@ -156,7 +154,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 ==Italian==
 
 ===Pronunciation===
-* {{IPA|[ˈkome]}}
+* {{IPA|[ˈkome]|lang=it}}
 
 ===Etymology===
 Compare Spanish ''[[como]]'', ''[[cómo]]''.
@@ -194,7 +192,7 @@ Compare Spanish ''[[como]]'', ''[[cómo]]''.
 Latin [[comede]] (imperative), [[comedit]] (present).
 
 ===Pronunciation===
-* SAMPA /"kome/
+* {{SAMPA|/"kome/}}
 
 ===Verb===
 '''come'''
