/* Pronunciation */ rm nonstd hdr <come#5210390>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -11,9 +11,7 @@
 * {{enPR|kŭm}}, {{IPA|/kʌm/}}, {{SAMPA|/kVm/}}
 * {{audio|en-us-come.ogg|Audio (US)}}
 * {{rhymes|ʌm}}
-
-====Homophones====
-* [[cum]]
+* Homophones: [[cum]]
 
 ===Verb===
 {{en-verb|comes|[[coming]] ''or archaic'' [[come]]|came|come}}
