--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -15,6 +15,7 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 ====Translations====
 {{top}}
 * Arabic: {{Arab|[[يوغوسلافيا]]}} (yuğuslāfiya) {{f}}
+* Armenian: [[Հարավսլավիա]] (Haravslavia)
 * Bosnian: {{t-|bs|Jugoslavija|f}}
 * Chinese: [[南斯拉夫]] (Nánsīlāfū)
 * Croatian: {{t-|hr|Jugoslavija|f}}
