--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -43,13 +43,14 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 * Icelandic: {{t+|is|pils|n}}
 * Italian: {{t+|it|gonna}}
 * Japanese: [[スカート]] ([[すかーと]]) (sukāto)
-{{trans-mid}}
 * Korean: [[치마]] (chima)
+{{trans-mid}}
 * Maltese: [[dublett]] {{m}}
 * Old English: [[scyrte]] {{f}}
 * Persian: {{fa-Arab|[[دامن دوخت]]}}
 * Polish: {{t-|pl|spódnica|f}}
 * Portuguese: {{t+|pt|saia|f}}
+* Romani [[rotya]]
 * Russian: {{t+|ru|юбка|f|tr=júbka|sc=Cyrl}}
 * Serbian:
 *: Cyrillic: [[сукња#Serbian|сукња]] {{f}}
