--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -65,7 +65,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}} ''(arch./poetic)''
 * [[Breton]]: [[pont#Breton|pont]] {{m}}, pontoù {{p}}
 * Bulgarian: {{t+|bg|мост|m|sc=Cyrl}}
-* {{trreq|Burmese}}
+* Burmese: {{t|my|တံတား|sc=Mymr}}
 * CJKV Characters: [[橋]]
 * [[Catalan]]: [[pont#Catalan|pont]]
 * [[Central Atlas Tamazight]]: {{t|tzm|ⵜⵉⵍⴻⴳⴳⵡⵉⵜ|f|tr=tileggwit|sc=Tfng}}
