trans link [[Lingala]] <bridge#5231970>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -103,7 +103,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Latin: {{t+|la|pons|m}}
 {{trans-mid}}
 * Latvian: {{t-|lv|tilts|m|xs=Latvian}}
-* Lingala: [[gwagwa]], [[gbagba]] (''pl'' bagbagba)
+* [[Lingala]]: [[gwagwa]], [[gbagba]] (''pl'' bagbagba)
 * Lithuanian: {{t+|lt|tiltas|m|xs=Lithuanian}}
 * [[Lower Sorbian]]: [[móst]] {{m}}
 * {{trreq|Malay}}
