--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -71,6 +71,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 =====Translations=====
 {{trans-top|to enumerate or determine number}}
 * [[American Sign Language]]: {{t|ase|FlatF@BasePalm-PalmDown-FlatB@CenterChesthigh-PalmUp FlatF@InFinger-PalmDown-FlatB@CenterChesthigh}}
+* Armenian: [[հաշվել]] (hašvel)
 * [[Breton]]: [[kontañ]]
 * Czech: {{t+|cs|počítat}}
 * Danish: [[tælle]]
