--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -113,6 +113,7 @@ From {{etyl|fro}} ''[[conte]]''
 
 =====Translations=====
 {{trans-top|the male ruler of a county}}
+* Armenian: [[կոմս]] (koms)
 * [[Breton]]: [[kont]] {{m}} -ed {{p}}
 * Czech: {{t-|cs|hrabě|n}}
 * Danish: {{t-|da|greve|c}}
