--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -34,6 +34,7 @@
 =====Translations=====
 {{trans-top|dock or harbour}}
 * Arabic: {{Arab|[[ميناء]]}} {{IPAchar|(mīna’)}} {{m}}
+* Armenian: [[նավահանգիստ]] (navahangist)
 * Chinese: [[港口]] (gǎngkǒu)
 * Czech: {{t-|cs|přístav|m}}
 * Dutch: {{t+|nl|haven|f}}
@@ -59,6 +60,7 @@
 {{trans-bottom}}
 
 {{trans-top|town or city with a dock or harbour}}
+* Armenian: [[նավահանգիստ]] (navahangist)
 * Dutch: {{t-|nl|havenstad|f}}
 * Finnish: [[satamakaupunki]], [[satama]]
 * French: {{t+|fr|port|m}}
