--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -2,8 +2,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/poʊɹt/, /pɔːɹt/, /pɔːt/}}
-* {{SAMPA|/poUr\t/, /pO:r\t/, /pO:r\t/}}
+* {{IPA|/poʊɹt/|/pɔːɹt/|/pɔːt/}}, {{SAMPA|/poUr\t/|/pO:r\t/|/pO:r\t/}}
 * {{audio|en-us-port.ogg|Audio (US)}}
 * {{rhymes|ɔː(r)t}}
 
@@ -45,8 +44,8 @@
 * Greek: {{t+|el|λιμάνι|n|sc=Grek}}, {{t+|el|λιμένας|m|sc=Grek}}
 * Hungarian: {{t+|hu|kikötő}}
 * [[Ido]]: [[portuo]]
-* Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
 {{trans-mid}}
+* Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
 * Italian: {{t+|it|porto|m}}
 * Japanese: [[港]]　([[みなと]], ''minato'')
 * Korean: [[항구]] ([[港口]], hanggu)
@@ -66,8 +65,8 @@
 * French: {{t+|fr|port|m}}
 * German: {{t+|de|Hafenstadt|f}}
 * Greek: {{t+|el|πόρτο|n|sc=Grek}}
-* Hungarian: [[kikötőváros]]
 {{trans-mid}}
+* Hungarian: [[kikötőváros]]
 * [[Ido]]: [[portuo]]
 * Italian: [[città portuale]] {{f}}
 * Polish: [[miasto portowe]] {{n}}
@@ -211,8 +210,8 @@ From {{etyl|fro}} (and {{etyl|fr}}) {{term|porter#verb|porter (verb)|lang=fro}},
 {{trans-top|to transfer from one state to another}}
 * Dutch: [[overdragen]]
 * Finnish: {{t+|fi|muuntaa}}, {{t+|fi|siirtää}}
-* French: {{t+|fr|porter}}
 {{trans-mid}}
+* French: {{t+|fr|porter}}
 * Portuguese: {{t+|pt|portar}}
 {{trans-bottom}}
 
@@ -276,8 +275,7 @@ From {{etyl|fro}} (and {{etyl|fr}}) {{term|porter#verb|porter (verb)|lang=fro}},
 
 ===Pronunciation===
 * {{audio|Fr-port.ogg|audio}}
-* {{IPA|/pɔʁ/}}
-* {{SAMPA|/pOR/}}
+* {{IPA|/pɔʁ/|lang=fr}}, {{SAMPA|/pOR/}}
 
 ===Noun===
 {{infl|fr|noun|g=m}}
