--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -13,12 +13,12 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 # Former country on the [[Balkan Peninsula]]. In addition to [[Serbia]] and [[Montenegro]], [[Macedonia|Republic of Macedonia]], [[Bosnia and Herzegovina|Bosnia-Herzegovina]], [[Slovenia]], and [[Croatia]] were also part of the Yugoslav Federation prior to the 1990s.
 
 ====Translations====
-{{top}}
+{{trans-top|Former country in the Balkans}}
 * Arabic: {{Arab|[[يوغوسلافيا]]}} (yuğuslāfiya) {{f}}
 * Armenian: [[Հարավսլավիա]] (Haravslavia)
 * Bosnian: {{t-|bs|Jugoslavija|f}}
 * Chinese: [[南斯拉夫]] (Nánsīlāfū)
-* Croatian: {{t-|hr|Jugoslavija|f}}
+* Croatian: {{t-|hr|Jugoslavija|alt=Jugòslāvija|f}}
 * Czech: [[Jugoslávie#Czech|Jugoslávie]] {{f}}
 * Dutch: {{t-|nl|Joegoslavië}}
 * Esperanto: [[Jugoslavio]]
@@ -28,7 +28,7 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 * Greek: [[Γιουγκοσλαβία]] (Yiougkoslavía) {{f}}
 * Hungarian: [[Jugoszlávia]]
 * Italian: {{t-|it|Jugoslavia}}, {{t-|it|Iugoslavia|f}}
-{{mid}}
+{{trans-mid}}
 * Japanese: {{t-|ja|ユーゴスラビア|tr=Yūgosurabia|sc=Jpan}}, {{t-|ja|ユーゴスラヴィア|tr=Yūgosuravia|sc=Jpan}}
 * Korean: [[유고슬라비아]] (Yugoseullabia)
 * Maltese: il-[[Jugoslavja]]
@@ -41,7 +41,7 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 * Slovene: {{t+|sl|Jugoslavija|f}}
 * Spanish: Yugoslavia, [[Yugoeslavia]] {{f}}
 * Swedish: {{t+|sv|Jugoslavien}}
-{{bottom}}
+{{trans-bottom}}
 
 ====Related terms====
 * [[Yugoslav]]
