middot (HTML) to | in hyphenation template, sorted/rebalanced translations <beautiful#5245677>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -8,7 +8,7 @@
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
 * {{audio|en-us-beautiful.ogg|Audio (US)}}
-* {{hyphenation|beau&middot;ti&middot;ful}}
+* {{hyphenation|beau|ti|ful}}
 
 ===Adjective===
 {{en-adj}}
@@ -100,8 +100,8 @@
 * Finnish: {{t+|fi|kaunis}}
 * French: {{t+|fr|beau|m}}
 * Hebrew: [[נאה]] (na'e)
-* Italian: [[bel]] (''before "tempo"''); [[bello]] (''after "tempo"'')
 {{trans-mid}}
+* Italian: [[bel]] (''before "tempo"''); [[bello]] (''after "tempo"'')
 * Kurdish: {{KUchar|[[خۆش]]}}, {{KUchar|[[فێنک]]}}
 * Swedish: {{t+|sv|fint|n}}, {{t+|sv|vackert|n}}
 * [[Tamil]]: [[அழகிய]] [azhagiya]
