--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -1,4 +1,4 @@
-{{see|座}}
+{{also|座}}
 ==Translingual==
 
 ===Han character===
@@ -47,7 +47,7 @@
 ==Mandarin==
 
 ===Pronunciation===
-*{{audio|zh-zuò.ogg|audio}}
+* {{audio|zh-zuò.ogg|audio}}
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[wù]] ([[wu4]]), [[zuò]] ([[zuo4]])|wg=wu<sup>4</sup>, tso<sup>4</sup>}}
