--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -27,12 +27,13 @@
 # {{defn|Japanese}}
 
 ====Readings====
-* {{ja-readings|on=[[ぼう]] (bō)|kun=[[すばる]] (subaru)}}
+* {{ja-readings|on=[[ボウ]] (bō), [[モウ]] (mō)|kun= (none)}}
+* Nanori (using for a person's name) [[すばる]] (subaru)
 
 ===Proper noun===
 {{ja-pos|k|proper|hira=すばる|rom=Subaru}}
 
-# the [[Pleiades]] (star cluster)
+# a person's name
 
 ----
 
@@ -49,6 +50,10 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[mǎo]] ([[mao3]]), [[nǐ]] ([[ni3]]), [[zhì]] ([[zhi4]])|wg=mao<sup>3</sup>, ni<sup>3</sup>, chih<sup>4</sup>}}
+
+===Proper noun===
+
+# the [[Pleiades]] (star cluster)
 
 # {{defn|Mandarin}}
 
