--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -31,8 +31,9 @@
 * Nanori (using for a person's name) [[すばる]] (subaru)
 
 ===Proper noun===
-{{ja-pos|k|proper|hira=すばる|rom=Subaru}}
+{{ja-pos|k|proper|hira=すばる|rom=Subaru}} (すまる, Sumaru; たかし, Takashi; のぼる, Noboru)
 
+# the [[Pleiades]] (star cluster)
 # a person's name
 
 ----
