--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -23,6 +23,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 
 ====Translations====
 {{trans-top|piece of cloth covering a window}}
+* Armenian: [[վարագույր]] (varaguyr)
 * Czech: [[závěs]] {{m}}
 * Finnish: [[verho]]
 * German: [[Vorhang]] {{m}}
@@ -38,6 +39,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-bottom}}
 
 {{trans-top|piece of cloth in a theater}}
+* Armenian: [[վարագույր]] (varaguyr)
 * Czech: [[opona]] {{f}}
 * Finnish: [[esirippu]]
 * German: [[Vorhang]] {{m}}
