--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -1,4 +1,4 @@
-{{see|壞}}
+{{also|壞}}
 ==Translingual==
 {{Han stroke|[[Image:坏-bw.png|thumbnail|center|600 px]]}}
 
@@ -45,7 +45,7 @@
 ==Mandarin==
 
 ===Pronunciation===
-*{{audio|zh-huài.ogg|audio}}
+* {{audio|zh-huài.ogg|audio}}
 
 ===Hanzi===
 {{cmn-hanzi|tra=壞|pin=[[huài]] ([[huai4]]), [[pī]] ([[pi1]])|wg=p'i<sup>1</sup>}}
