* before IPA, +trans-see template, rm tag, sorted/rebalanced translations <curve#5281190>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -91,11 +91,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Swedish: {{t+|sv|kurva|c}}
 {{trans-bottom}}
 
-{{trans-top|algebraic curve}}
-: ''See'' '''[[algebraic curve#Translations|algebraic curve]]'''
-{{trans-mid}}
-{{trans-bottom}}
-
+{{trans-see|algebraic curve|[[algebraic curve#Translations|algebraic curve]]}}
 {{trans-top|informal: usually in plural: attractive features of a woman}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
 * Hebrew: [[חיטובים]] (khit'uvym) {{m|p}}
@@ -180,12 +176,23 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 ==Romanian==
 
 ===Pronunciation===
-{{IPA|[ˈkur.ve]|lang=ro}}
+* {{IPA|[ˈkur.ve]|lang=ro}}
 
 ===Noun===
 '''curve''' {{f|p}}
 
 # {{plural of|curvă|lang=Romanian}} [[whores]]
+
+----
+
+==Spanish==
+
+===Verb===
+{{es-verb-form|curvar}}
+
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|[[curvar]]}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|[[curvar]]}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|[[curvar]]}}
 
 [[ar:curve]]
 [[de:curve]]
@@ -206,15 +213,3 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 [[vi:curve]]
 [[tr:curve]]
 [[zh:curve]]
-
-----
-
-==Spanish==
-
-===Verb===
-{{es-verb-form|curvar}}
-
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|[[curvar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|[[curvar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|[[curvar]]}}
-{{rfc-auto}}
