--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -1,6 +1,9 @@
 {{also|舊}}
 ==Translingual==
 
+===Etymology===
+Shorthand for [[1|I]] (one) + [[日]] (day), representing the day before today (the past)
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=中日 (LA)}}
 
