--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -20,6 +20,7 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 * Chinese: [[南斯拉夫]] (Nánsīlāfū)
 * Croatian: {{t-|hr|Jugoslavija|f|alt=Jugòslāvija}}
 * Czech: [[Jugoslávie#Czech|Jugoslávie]] {{f}}
+* Danish: {{t+|da|Jugoslavien}}
 * Dutch: {{t-|nl|Joegoslavië}}
 * Esperanto: [[Jugoslavio]]
 * Finnish: {{t+|fi|Jugoslavia}}
