--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -6,7 +6,7 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 ===Pronunciation===
 * {{audio|Fr-mandat.ogg|audio}}
 * {{IPA|/mãˈda/|lang=fr}}, {{SAMPA|/ma~"da/}}
-* '''Hyphenation:''' man·dat
+* {{hyphenation|man|dat}}
 
 ===Noun===
 '''mandat''' ''m''
