--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -35,6 +35,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Icelandic: [[þ.e.]] {{i|[[það]] [[er]]}}, [[þ.e.a.s.]] {{i|[[það]] [[er]] [[að]] [[segja]]}}
 {{trans-mid}}
 * Italian: {{t+|it|cioè}}
+* Japanese: [[すなわち]] (sunawachi)
 * [[Malayalam]]: [[അതായത്]] (athaayathu)
 * Norwegian: [[dvs.]]
 * Polish: [[tzn.]] {{i|[[to]] [[znaczy]]}}, [[tj.]] {{i|[[to]] [[jest]]}}
