--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -33,9 +33,10 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Greek: [[δηλαδή]], [[ήτοι]], [[τουτέστιν]] (diladí, ítoi, toutèstin)
 * Hungarian: [[azaz]]
 * Icelandic: [[þ.e.]] {{i|[[það]] [[er]]}}, [[þ.e.a.s.]] {{i|[[það]] [[er]] [[að]] [[segja]]}}
-{{trans-mid}}
 * Italian: {{t+|it|cioè}}
+{{trans-mid}}
 * Japanese: [[すなわち]] (sunawachi)
+* Korean: [[즉]] (jeuk)
 * [[Malayalam]]: [[അതായത്]] (athaayathu)
 * Norwegian: [[dvs.]]
 * Polish: [[tzn.]] {{i|[[to]] [[znaczy]]}}, [[tj.]] {{i|[[to]] [[jest]]}}
