--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -32,9 +32,10 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * German: [[d. h.]] {{i|[[das heißt]]}}
 * Greek: [[δηλαδή]], [[ήτοι]], [[τουτέστιν]] (diladí, ítoi, toutèstin)
 * Hungarian: [[azaz]]
+* Hebrew: [[כלומר]]
 * Icelandic: [[þ.e.]] {{i|[[það]] [[er]]}}, [[þ.e.a.s.]] {{i|[[það]] [[er]] [[að]] [[segja]]}}
-* Italian: {{t+|it|cioè}}
 {{trans-mid}}
+* Italian: {{t+|it|cioè}}
 * Japanese: [[すなわち]] (sunawachi)
 * Korean: [[즉]] (jeuk)
 * [[Malayalam]]: [[അതായത്]] (athaayathu)
