--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -28,16 +28,13 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Danish: [[dvs.]] {{i|[[det]] [[vil]] [[sige]]}}
 * Dutch: {{t-|nl|d.w.z.}} {{i|[[dat]] [[wil]] [[zeggen]]}}
 * Finnish: [[l.]] {{i|[[eli]]}}, [[ts.]] {{i|[[toisin sanoen]]}}
-* French: {{t+|fr|c.-à-d.}} {{i|[[c'est à dire]]}}
+* French: {{t+|fr|c.-à-d.}}
 * German: [[d. h.]] {{i|[[das heißt]]}}
-* Greek: [[δηλαδή]], [[ήτοι]], [[τουτέστιν]] (diladí, ítoi, toutèstin)
+* Greek: [[δηλαδή]], [[ήτοι]], [[τουτέστιν]]
 * Hungarian: [[azaz]]
-* Hebrew: [[כלומר]]
 * Icelandic: [[þ.e.]] {{i|[[það]] [[er]]}}, [[þ.e.a.s.]] {{i|[[það]] [[er]] [[að]] [[segja]]}}
 {{trans-mid}}
 * Italian: {{t+|it|cioè}}
-* Japanese: [[すなわち]] (sunawachi)
-* Korean: [[즉]] (jeuk)
 * [[Malayalam]]: [[അതായത്]] (athaayathu)
 * Norwegian: [[dvs.]]
 * Polish: [[tzn.]] {{i|[[to]] [[znaczy]]}}, [[tj.]] {{i|[[to]] [[jest]]}}
