--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -34,7 +34,7 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 * Korean: [[유고슬라비아]] (Yugoseullabia)
 * Maltese: il-[[Jugoslavja]]
 * Polish: {{t+|pl|Jugosławia|f}}
-* Portuguese: [[Jugoslávia]] ''(Portugual)'' {{f}}, [[Iugoslávia]] ''(Brazil)'' {{f}}
+* Portuguese: [[Jugoslávia]] ''(Portugal)'' {{f}}, [[Iugoslávia]] ''(Brazil)'' {{f}}
 * Russian: {{t+|ru|Югославия|f|tr=Jugoslávija|sc=Cyrl}}
 * Serbian:
 *: Cyrillic: [[Југославија#Serbian|Југославија]] {{f}}
