--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -197,7 +197,7 @@ From {{etyl|fro}} (and {{etyl|fr}}) {{term|porter#verb|porter (verb)|lang=fro}},
 # {{obsolete}} To carry, bear, or [[transport]].<!--Whence "porter".-->
 # {{military}} To hold a weapon with both hands diagonally across the body
 # To transfer from one state to another.
-# {{computing}} To adapt a program so that it works on a different platform.
+# {{computing|video games}} To adapt a program so that it works on a different platform; to adapt a console [[video game]] to be sold and played on another brand of console.
 
 =====Derived terms=====
 * {{sense|To carry}} {{term|porter}}
