/* Noun */ -rfv <push#5309877>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -136,7 +136,7 @@ From {{OF.}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{L.}} ''[[pulsare]]
 #: ''Some details got lost in the '''push''' to get the project done.''
 #: ''Let's give one last push on our advertising campaign.''
 # {{military}} A [[marching]] or [[drill]] [[maneuver]]/[[manoeuvre]] performed by moving a [[formation]] (especially a [[company front]]) [[forward]] or [[toward]] the [[audience]], usually to accompany a dramatic [[climax]] or [[crescendo]] in the music.
-# {{rfv-sense}} a wager that results in no loss or gain for the bettor as a result of a tie or even score
+# a wager that results in no loss or gain for the bettor as a result of a tie or even score
 
 ====Derived terms====
 * [[give someone the push]]
