--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -1,4 +1,5 @@
 {{wikipedia|dab=port (disambiguation)|port}}
+{{wikipedia|dab=Port (disambiguation)|Port}}
 ==English==
 
 ===Pronunciation===
@@ -10,8 +11,8 @@
 {{etyl|ang}} {{term|port|lang=ang}}, from {{etyl|la}} {{term|portus||port, harbour}}.
 
 ====Noun====
-{{wikipedia}}
 {{en-noun}}
+{{wikipedia|Port|Port (place where ships dock)}}
 
 # A place on the [[coast]] at which ships can shelter, or dock to load and unload cargo or passengers.
 # A town or city containing such a place.
@@ -26,9 +27,8 @@
 * {{sense|right-hand side of a vessel}} [[starboard]]
 
 =====Derived terms=====
-* [[airport]]
-* [[seaport]]
-* [[spaceport]]
+* [[airport]], [[seaport]], [[spaceport]]
+* [[port authority]]
 
 =====Translations=====
 {{trans-top|dock or harbour}}
@@ -100,7 +100,7 @@
 {{en-adj|-}}
 
 # {{nautical}} Of or relating to port, the left-hand side of a vessel.
-#: ''on the port side''
+#: ''on the '''port''' side''
 
 =====Synonyms=====
 * [[larboard]], [[left]]
@@ -121,24 +121,26 @@
 {{trans-bottom}}
 
 ===Etymology 2===
-From {{etyl|la}} {{term|porta||passage, gate}}, reinforced in {{etyl|enm}} from {{etyl|fro}} {{term|porte|lang=fro}}
+From {{etyl|la}} {{term|porta||passage, gate}}, reinforced in {{etyl|enm}} from {{etyl|fro}} {{term|porte|lang=fro}}.
 
 ====Noun====
 {{en-noun}}
 
-# {{obsolete|except|Scots}} An entryway, gate, or [[portal]].
-# A doorway in the side of a [[ship]], especially for boarding or loading; a [[porthole]].
-# {{curling|bowls}} A space between two [[stone]]s wide enough for a delivered stone or bowl to pass through
+# {{obsolete|except [[w:Scots language|Scots]]}} An [[entryway]] or [[gate]]; a [[portal]].
+#:''Him I accuse/The city '''ports''' by this hath enter'd'' — [[w:William Shakespeare|Shakespeare]], ''[[w:Coriolanus (play)|Coriolanus]]'' (1623), [[s:The_Tragedy_of_Coriolanus#SCENE_VI._Antium._A_public_place.|V.vi.]]
+#:''And from their ivory '''port''' the Cherubim,/Forth issuing at the accustomed hour,'' — [[w:John Milton|Milton]], ''[[w:Paradise Lost|Paradise Lost]]'' (1667), [[s:Paradise Lost/Book IV|book IV]]
+# An opening or doorway in the side of a [[ship]], especially for boarding or loading; an [[embrasure]] through which a cannon may be discharged; a [[porthole]].
+#: ''...her '''ports''' being within sixteen inches of the water...'' — [[w:Walter Raleigh|Sir W. Raleigh]]
+# {{curling|bowls}} A space between two [[stone]]s wide enough for a delivered stone or bowl to pass through.
 # An opening where a connection (such as a pipe) is made.
-# {{computing}} A logical or physical construct in and from which data are transferred.
+# {{computing}} A logical or physical construct in and from which data are transferred. {{pedialite|Computer port (hardware)}}
 # {{computing}} A female connector of an electronic device, into which a cable's male connector can be inserted.
+
+=====Derived terms=====
+* [[porthole]]
 
 =====Translations=====
 {{trans-see|entryway, portal|[[portal]]}}
-
-{{trans-top|opening in the side of a ship}}
-{{trans-mid}}
-{{trans-bottom}}
 
 {{trans-top|opening where a connection is made}}
 * Finnish: [[liitin]], [[portti]] (''computers'')
@@ -146,7 +148,7 @@ From {{etyl|la}} {{term|porta||passage, gate}}, reinforced in {{etyl|enm}} from 
 * Swedish: {{t+|sv|port|c}}
 {{trans-bottom}}
 
-{{trans-top|computing: logical or physical construct in and from which data are transferred}}
+{{trans-top|computing: logical or physical construct into and from which data are transferred}}
 * Estonian: {{t+|et|port}}
 * Finnish: {{t-|fi|portti}}
 {{trans-mid}}
@@ -155,58 +157,23 @@ From {{etyl|la}} {{term|porta||passage, gate}}, reinforced in {{etyl|enm}} from 
 {{trans-bottom}}
 
 ===Etymology 3===
-Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from where the wines were shipped.
-
-====Noun====
-{{en-noun}}
-
-# A type of [[fortified wine]] traditionally made in [[Portugal]].
-
-=====Synonyms=====
-* {{sense|fortified wine}} [[porto]]<!--does this exist?-->, [[port wine]]
-
-=====Translations=====
-{{trans-top|fortified wine}}
-* Dutch: {{t-|nl|porto}}, {{t+|nl|port|m}}
-* Estonian: {{t-|et|portvein}}
-* Finnish: {{t-|fi|portviini}}
-* French: [[vin de Porto]] {{m}}
-* German: {{t+|de|Portwein|m}}
-{{trans-mid}}
-* Greek: [[πορτό]] {{n}}, [[οίνος Πορτογαλίας]] {{m}}
-* Italian: {{t+|it|porto|m}}
-* Portuguese: {{t+|pt|vinho do Porto|m}}
-* Spanish: [[vino de Oporto]] {{m}}
-* Swedish: [[portvin]] {{n}}
-{{trans-bottom}}
-
-===Etymology 4===
-Abbreviation of [[portmanteau]].
-
-====Noun====
-{{en-noun}}
-
-# {{AU|colloquial}} A schoolbag or suitcase.
-
-===Etymology 5===
-From {{etyl|fro}} (and {{etyl|fr}}) {{term|porter#verb|porter (verb)|lang=fro}}, {{term|port|port (noun)|lang=fr}},  from {{etyl|la}} {{term|portare||carry|lang=la}}.
+From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|lang=la}}. Akin to {{term|transport}}.
 
 ====Verb====
 {{en-verb}}
 
-# {{obsolete}} To carry, bear, or [[transport]].<!--Whence "porter".-->
-# {{military}} To hold a weapon with both hands diagonally across the body
-# To transfer from one state to another.
-# {{computing|video games}} To adapt a program so that it works on a different platform; to adapt a console [[video game]] to be sold and played on another brand of console.
+# {{obsolete}} To carry, bear, or [[transport]]. See {{term|porter}}.
+#: ''They are easily '''ported''' by boat into other shires.'' — [[w:Thomas Fuller|Fuller]], ''The History of the Worthies of England''
+# {{rfv-sense}} To transfer from one state to another.
+# {{military}} To hold or carry (a weapon) with both hands so that it lays diagonally across the front of the body, with the barrel or similar part near the left shoulder and the right hand grasping the small of the stock; to throw (the weapon) into this position.
+#: '''''Port''' arms!''
+#:''...the angelic squadron...began to hem him round with '''ported''' spears.'' — [[w:John Milton|Milton]], ''[[w:Paradise Lost|Paradise Lost]]'' (1667), [[s:Paradise Lost/Book IV|book IV]]
+# {{computing|video games}} To adapt, modify, or create a new version of, a program so that it works on a different platform; to adapt a console [[video game]] title to be sold and played on another brand of console. {{pedialite|Porting|Porting (computing)}}
 
 =====Derived terms=====
 * {{sense|To carry}} {{term|porter}}
 
 =====Translations=====
-{{trans-top|military use}}
-{{trans-mid}}
-{{trans-bottom}}
-
 {{trans-top|to transfer from one state to another}}
 * Dutch: {{t-|nl|overdragen}}
 * Finnish: {{t+|fi|muuntaa}}, {{t+|fi|siirtää}}
@@ -223,35 +190,54 @@ From {{etyl|fro}} (and {{etyl|fr}}) {{term|porter#verb|porter (verb)|lang=fro}},
 ====Noun====
 {{en-noun}}
 
-# {{dated}} the way in which a person carries themselves; [[bearing]]
-# something used to carry a thing, especially a frame for [[wick]]s in candle-making
-# {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked
-# {{computing}} a program that has been so adapted.
+# {{dated}} The way in which a person carries themselves; [[bearing]]
+#: ''And of his '''port''' as meeke as is a mayde.'' — [[w:Geoffrey Chaucer|Chaucer]], [[w:The Canterbury Tales|Canterbury Tales]], [[s:The_Canterbury_Tales/General_Prologue|line 69]]
+#: ''..the necessities of pomp, grandeur, and a suitable port in the world.'' — [[w:Robert South|South]]
+# Something used to carry a thing, especially a frame for [[wick]]s in candle-making.
+# {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
+# {{computing}} A program that has been so adapted.
 
 =====Translations=====
-{{trans-top|one’s bearing}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|something used to carry}}
-{{trans-mid}}
-{{trans-bottom}}
-
 {{trans-top|computing: act of adapting a program so that it works on a different platform}}
 * Finnish: [[sovitus]], [[sovittaminen]], [[porttaaminen]] (''informal''), [[porttaus]] (''informal'')
 {{trans-mid}}
 * Swedish: [[portering]] {{c}}, [[portning]] {{c}}
 {{trans-bottom}}
 
-{{trans-top|computing: a program that has been so adapted}}
+===Etymology 4===
+Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from whence the wines were originally shipped.
+
+====Noun====
+{{en-noun}}
+{{wikipedia|Port wine}}
+
+# A type of very sweet [[fortified wine]], mostly dark red, traditionally made in [[Portugal]].
+
+=====Synonyms=====
+* {{sense|fortified wine}} [[porto]], [[port wine]]
+
+=====Translations=====
+{{trans-top|fortified wine}}
+* Dutch: {{t-|nl|porto}}, {{t+|nl|port|m}}
+* Estonian: {{t-|et|portvein}}
+* Finnish: {{t-|fi|portviini}}
+* French: [[vin de Porto]] {{m}}
+* German: {{t+|de|Portwein|m}}
 {{trans-mid}}
+* Greek: [[πορτό]] {{n}}, [[οίνος Πορτογαλίας]] {{m}}
+* Italian: {{t+|it|porto|m}}
+* Portuguese: {{t+|pt|vinho do Porto|m}}
+* Spanish: [[vino de Oporto]] {{m}}
+* Swedish: [[portvin]] {{n}}
 {{trans-bottom}}
 
-===See also===
-* {{pedialite|Port|Port (place where ships dock)}}
-* {{pedialite|Port wine}}
-* {{pedialite|Port (computing)|Port (transfer of computer of computer data)}}
-* {{pedialite|Porting|Porting (transfer of computer programs between platforms)}}
+===Etymology 5===
+Abbreviation of [[portmanteau]].
+
+====Noun====
+{{en-noun}}
+
+# {{AU|colloquial}} A schoolbag or suitcase.
 
 [[Category:Wines]]
 
