--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -168,7 +168,7 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 # {{obsolete}} To carry, bear, or [[transport]]. See {{term|porter}}.
 #: ''They are easily '''ported''' by boat into other shires.'' — [[w:Thomas Fuller|Fuller]], ''The History of the Worthies of England''
 # {{rfv-sense}} To transfer from one state to another.
-# {{military}} To hold or carry (a weapon) with both hands so that it lays diagonally across the front of the body, with the barrel or similar part near the left shoulder and the right hand grasping the small of the stock; to throw (the weapon) into this position.
+# {{military}} To hold or carry (a weapon) with both hands so that it lays diagonally across the front of the body, with the barrel or similar part near the left shoulder and the right hand grasping the small of the stock; to throw (the weapon) into this position on command.
 #: '''''Port''' arms!''
 #:''...the angelic squadron...began to hem him round with '''ported''' spears.'' — [[w:John Milton|Milton]], ''[[w:Paradise Lost|Paradise Lost]]'' (1667), [[s:Paradise Lost/Book IV|book IV]]
 # {{computing|video games}} To adapt, modify, or create a new version of, a program so that it works on a different platform; to adapt a console [[video game]] title to be sold and played on another brand of console. {{pedialite|Porting|Porting (computing)}}
@@ -177,7 +177,6 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 * [[porter]]
 * [[portage]]
 * [[port-o-john]], [[port-o-potty]]
-* {{sense|military}} [[at the high port]]
 
 =====Translations=====
 {{trans-top|to transfer from one state to another}}
@@ -196,12 +195,16 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 ====Noun====
 {{en-noun}}
 
+# Something used to carry a thing, especially a frame for [[wick]]s in candle-making.
 # {{dated}} The manner in which a person carries himself; [[bearing]]; [[deportment]]; [[carriage]]. See also {{term|portance}}.
 #: ''And of his '''port''' as meeke as is a mayde.'' — [[w:Geoffrey Chaucer|Chaucer]], ''[[w:The Canterbury Tales|Canterbury Tales]]'', [[s:The_Canterbury_Tales/General_Prologue|line 69]]
 #: ''..the necessities of pomp, grandeur, and a suitable port in the world.'' — [[w:Robert South|Robert South]]
-# Something used to carry a thing, especially a frame for [[wick]]s in candle-making.
+# {{military}} The position of a weapon when ported; a rifle position executed by throwing the weapon diagonally across the front of the body, with the right hand grasping the small of the stock and the barrel sloping upward and crossing the point of the left shoulder.
 # {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
 # {{computing}} A program that has been so adapted.
+
+=====Derived terms=====
+* {{sense|military}} [[at the high port]]
 
 =====Translations=====
 {{trans-top|computing: act of adapting a program so that it works on a different platform}}
