iwiki +cs, gl <stomach#5329638>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -112,10 +112,12 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 [[ang:stomach]]
 [[ar:stomach]]
 [[zh-min-nan:stomach]]
+[[cs:stomach]]
 [[de:stomach]]
 [[el:stomach]]
 [[fa:stomach]]
 [[fr:stomach]]
+[[gl:stomach]]
 [[ko:stomach]]
 [[hy:stomach]]
 [[hi:stomach]]
