-period from the image <coat#5331882>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -1,5 +1,5 @@
-[[Image:US Navy p coat wiki.jpg|thumb|Navy pea coat.]]
 ==English==
+[[Image:US Navy p coat wiki.jpg|thumb|Navy pea coat]]
 
 ===Pronunciation===
 * {{audio|en-us-coat.ogg|Audio (US)}}
