--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -32,9 +32,9 @@
 * {{ja-readings|on=[[えい]] (ei), [[よう]] (yō)|kun=[[はえる]] (haeru), [[うつる]] (utsuru), [[うつす]] (utsusu)}}
 
 ====Compounds====
-* [[映画]]
-* [[映写]]
-* [[映像]]
+* {{term|映画||[[movie]]|tr=えいが, eiga|lang=ja|sc=Jpan}}
+* {{term|映写|lang=ja|sc=Jpan}}
+* {{term|映像|lang=ja|sc=Jpan}}
 
 ----
 
