--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -58,7 +58,47 @@
 ===Noun===
 '''lies'''
 
-# [[list]]
+# [[list]] ''f''
+
+{| class="wikitable" style="text-align: center;"
+|+ '''Inflection'''
+!
+! Root singular
+! Root plural
+! Diminutive singular
+! Diminutive plural
+|-
+! [[Nominative]]
+| lies
+| lieste
+| lieske
+| lieskes
+|-
+! [[Genitive]]
+| lies
+| lieste
+| lieskes
+| lieskes
+|-
+! [[Locative]]
+| liestes
+| liesteser
+| liesteske
+| liestesker
+|-
+! [[Dative]]¹
+| ?
+| ?
+| ?
+| ?
+|-
+! [[Accusative]]¹
+| ?
+| ?
+| ?
+| ?
+|}
+# Dative and accusative are nowadays obsolete, use nominative instead.
 
 [[Category:Limburgish nouns]]
 
