--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -22,7 +22,7 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 {{trans-top|amount of money, time, etc.}}
 * Chinese:
 *: Mandarin: {{zh-ts|費用|费用}} ([[fèi]][[yòng]]), {{zh-ts|成本|成本}} ([[chéng]][[běn]])
-* Czech: {{t-|cs|náklad|m}}
+* Czech: {{t-|cs|náklad|m}}, {{t-|cs|cena|f}}
 * Finnish: {{t+|fi|hinta}}, {{t+|fi|kustannus}}
 * German: {{t+|de|Kosten|f|p}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos|sc=Grek}}, {{t+|el|δαπάνη|f|tr=dapáni|sc=Grek}}, {{t+|el|τίμημα|n|tr=tímima|sc=Grek}}, {{t+|el|αντίτιμο|n|tr=antítimo|sc=Grek}}
@@ -33,11 +33,13 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 * Kurdish: {{KUchar|[[به‌ها]]}}, {{KUchar|[[نرخ]]}}
 * [[Novial]]: [[kosto]]
 * Portuguese: {{t+|pt|custo|m}}
+* [[Scottish Gaelic]]: {{t-|gd|cosgais|f}}
 * Spanish: {{t+|es|costo|m}}
 * Swedish: {{t+|sv|kostnad|c}}
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
+* Czech: {{t-|cs|cena|f}}
 * Chinese:
 *: Mandarin: {{zh-ts|代價|代价}} ([[dài]][[jìa]])
 * Finnish: {{t+|fi|hinta}}
@@ -46,6 +48,7 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 {{trans-mid}}
 * Japanese: {{t|ja|代償|tr=[[だいしょう]], daishō|sc=Jpan}}
 * [[Novial]]: [[kosto]]
+* [[Scottish Gaelic]]: {{t-|gd|cosgais|f}}
 * Spanish: {{t+|es|costo|m}}
 * Swedish: {{t+|sv|kostnad|c}}
 {{trans-bottom}}
