--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -78,6 +78,7 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 * Italian: {{t+|it|costare}}
 * Japanese: [[費やす]] ([[ついやす]], tsuiyasu)
 * Polish: {{t+|pl|kosztować}}
+* Portuguese: {{t|pt|custar}}
 * [[Scottish Gaelic]]: {{t-|gd|cosg}}
 * Spanish: {{t-|es|costar}}
 * Swedish: {{t+|sv|kosta|c}}
