--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -3,13 +3,13 @@
 {{rank|week|stone|tree|781|cost|value|cast|speaking}}
 
 ===Etymology===
-From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
+From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/kɒst/}}
 * {{a|US}} {{IPA|/kɔst/}}
 * {{audio|en-us-cost.ogg|Audio (US)}}
-*: Rhymes: [[Rhymes:English:-ɒst|-ɒst]]
+*: {{rhymes|ɒst}}
 
 ===Noun===
 {{wikipedia}}
@@ -39,9 +39,9 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
-* Czech: {{t-|cs|cena|f}}
 * Chinese:
 *: Mandarin: {{zh-ts|代價|代价}} ([[dài]][[jìa]])
+* Czech: {{t-|cs|cena|f}}
 * Finnish: {{t+|fi|hinta}}
 * German: {{t+|de|Verlust|m}}, {{t+|de|Ausgaben|f}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos|sc=Grek}}
