sorted/rebalanced translations, trans unlink Old English <beautiful#5378612>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -35,7 +35,7 @@
 * (''well executed''): [[average]], [[bad]], [[mediocre]], [[poor]], [[shoddy]], [[substandard]], [[terrible]], [[weak]]
 
 ====Derived terms====
-*[[beautiful armadillo]]
+* [[beautiful armadillo]]
 * [[beautifully]]
 * [[beautifulness]]<!--?-->
 
@@ -47,7 +47,6 @@
 {{trans-top|possessing charm and attractive}}
 * [[Afrikaans]]: [[mooi]]
 * Albanian: [[bukur|i bukur]] {{m}}, e bukur {{f}}
-* [[Old English]]: [[wlitig]]
 * Arabic: {{Arab|[[جميل]]}} (jamīl)
 * Armenian: [[գեղեցիկ]] (geġec'ik), [[սիրուն]] (sirun)
 * [[Breton]]: [[brav]], [[kaer]]
@@ -69,13 +68,14 @@
 * Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat), [[सुन्दर]] (sundar)
 * Icelandic: {{t+|is|fallegur}}, {{t+|is|fagur}}
 * Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
-{{trans-mid}}
 * Italian: {{t+|it|bello}}
+{{trans-mid}}
 * Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt)
 * Kurdish: {{KUchar|[[جوان]]}}, {{KUchar|[[ئێسک سووک]]}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Novial]]: [[beli]]
+* Old English: [[wlitig]]
 * [[Old Norse]]: [[fagr]]
 * Persian: {{fa-Arab|[[زیبا]]}} (ziba), {{fa-Arab|[[ﻗﺷﻧﮕﮦ]]}} (ghashangeh)
 * Polish: [[piękny]] {{m}}, [[piękna]] {{f}}, [[piękne]] {{n}}, [[piękni]] {{plural}}, [[piękne]] {{plural}},{{f}}
