--- a/en/c/crept.6842.wikitext
+++ b/en/c/crept.6842.wikitext
@@ -1,16 +1,17 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/'krεpt/}}
-*{{audio|en-us-crept.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-ɛpt|-ɛpt]]
+* {{IPA|/'krεpt/}}
+* {{audio|en-us-crept.ogg|Audio (US)}}
+* {{rhymes|ɛpt}}
 
 ===Verb===
 '''crept'''
+
 # {{past of|[[creep]]}}
 
-[[Category:English irregular simple past forms]]
 [[Category:English irregular past participles]]
+[[Category:English irregular simple past forms]]
 
 [[ang:crept]]
 [[el:crept]]
