--- a/en/昏/昏.16951.wikitext
+++ b/en/昏/昏.16951.wikitext
@@ -51,7 +51,9 @@
 
 ==Vietnamese==
 ===Han character===
-'''昏''' ([[hôn]], [[hon]])
+{{vi-hantu|[[hôn]], [[hon]]}}
+
+# {{defn|Vietnamese}}
 
 [[fr:昏]]
 [[it:昏]]
