--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -1,30 +1,31 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/'kliɳ/}}
-*:Rhymes: [[Rhymes:English:-ɪŋ|-ɪŋ]]
+* {{IPA|/'kliɳ/}}
+*: {{rhymes|ɪŋ}}
 
 ===Noun===
 '''cling'''
+
 # Fruit (especially peach) whose flesh adheres strongly to the pit.
 #* '''1908''': [[w:O. Henry|O. Henry]], ''Hostages to Momus''
-#*:  Antelope steaks and fried liver to begin on, and venison cutlets with [[chili con carne]] and pineapple fritters, and then some sardines and mixed pickles; and top it off with a can of yellow '''clings''' and a bottle of beer.
+#*: Antelope steaks and fried liver to begin on, and venison cutlets with [[chili con carne]] and pineapple fritters, and then some sardines and mixed pickles; and top it off with a can of yellow '''clings''' and a bottle of beer.
 
 ===Verb===
 {{en-verb|clings|clinging|clung}}
 
 # To [[hold]] very [[tight]]ly, as to not fall off.
-#:''Seaweed '''clung''' to the anchor.''
+#: ''Seaweed '''clung''' to the anchor.''
 # To adhere to an object, without being affixed, in such a way as to follow its contours. Used especially of fabrics and films.
 
 ====Derived terms====
-*[[cling film]] / [[clingfilm]]
+* [[cling film]] / [[clingfilm]]
 
 ====Translations====
 {{top}}
 * Dutch: [[klampen]]
 * Finnish: [[takertua]], [[tarrautua]]
-* French : [[accrocher]], s'accrocher, [[coller]], se coller
+* French: [[accrocher]], s'accrocher, [[coller]], se coller
 * [[Galician]]: [[soster]], [[agarrar]] or [[suxeitar]]
 * Indonesian: [[sangkut|menyangkut]], [[sangkut|menyangkutkan]], [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
 {{mid}}
@@ -35,9 +36,9 @@
 {{bottom}}
 
 ===References===
-*{{R:Century 1911}}
-*{{R:Webster 1913}}
-*<references/>
+* {{R:Century 1911}}
+* {{R:Webster 1913}}
+* <references/>
 
 [[Category:English irregular verbs]]
 
