--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -1,6 +1,6 @@
 ==Translingual==
 {{stroke order|type=animate}}
-
+{{rfc-auto}}
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=4411<sub>2</sub>|canj=土心木 (GPD)}}
 
