--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -1,5 +1,5 @@
 ==Translingual==
-{{rfc-auto}}
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4111<sub>6</sub>|canj=土一日一 (GMAM)}}
 
@@ -35,6 +35,8 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[yuán]] ([[yuan2]])|wg=yüan<sup>2</sup>}}
+
+# {{defn|Mandarin}}
 
 ----
 
