--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -25,7 +25,8 @@
 {{trans-top|fair skinned/haired person}}
 * Danish: [[lyshåret]]; blond, [[blondine]]
 * Dutch:  blond, [[blondine]]
-* French: {{t|fr|blond}}
+* Esperanto: {{t+|eo|blondulo}}, {{t+|eo|blondulino}}
+* French: {{t+|fr|blond}}, {{t+|fr|blonde}}
 * German:  [[Blond]] mann, die [[Blondine]]
 * Hebrew: [[בלונדיני]] (blondyni) {{m}}, [[בלונדינית]] (blondynit) {{f}}
 * Hungarian: {{t+|hu|szőke}}
