convert OE. to etyl|ang, convert Pers. to etyl|fa, sorted/rebalanced translations <thunder#5416047>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{OE.}} {{term|þunor}}. Compare {{Pers.}} {{fa-Arab|[[تندر]]}} (tondar).
+From {{etyl|ang}} {{term|þunor}}. Compare {{etyl|fa}} {{fa-Arab|[[تندر]]}} (tondar).
 
 ===Pronunciation===
 * {{a|UK}}: {{IPA|/ˈθʌn.də/}}, {{SAMPA|/"TVnd@/}}
@@ -50,8 +50,8 @@ From {{OE.}} {{term|þunor}}. Compare {{Pers.}} {{fa-Arab|[[تندر]]}} (tondar
 * Italian: {{t-|it|tuono|m}}
 * Japanese: {{t+|ja|雷|tr=kaminarí|sc=Jpan}}
 * Korean: [[우레]] (ure)
-{{trans-mid}}
 * Polish: [[grzmot]] {{m}}
+{{trans-mid}}
 * Portuguese: {{t+|pt|trovão|m}}
 * Russian: {{t+|ru|гром|m|tr=grom|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[tàirneanach]] {{f}}
