--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,15 +13,7 @@
 ===Adjective===
 {{en-adj}}
 
-# possessing charm and attractive
-#: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
-# {{context|of the weather}} pleasant; clear.
-# well executed
-#: ''The skater performed a '''beautiful''' [[axel]].''
-# <!--not an interjection-->(''as a [[pro-sentence]]'') How beautiful that is!
-#: '''''Beautiful'''! What a catch!'' (referring to an athlete catching a ball)
-# <!--not an interjection-->(''as a pro-sentence; ironic'') How unfortunate that is!
-#: '''''Beautiful'''! I dropped the soup on the floor!''
+#[['' '''Chelsie Hilt''''']]
 
 ====Synonyms====
 * (''possessing charm and attractive''): [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[handsome]], [[hot]] (''slang''), [[lovely]], [[nice-looking]], [[pretty]], [[shapely]], [[fit]] (''slang'')
