--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -189,7 +189,7 @@ Compare Spanish ''[[como]]'', ''[[cómo]]''.
 '''come'''
 
 # [[as soon as]]
-#: '''''Come''' arrivò...'' - As soon as he arrived...
+#: '''''Come''' arrivò...'' - As soon as he arrived...   test
 
 [[Category:Italian adverbs]]
 [[Category:Italian conjunctions]]
