--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -8,7 +8,7 @@
 
 ====Pronunciation====
 * {{IPA|/'spεlt/}}
-*: Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
+*: {{rhymes|ɛlt}}
 
 ====Verb====
 '''spelt'''
@@ -24,7 +24,7 @@ Unknown, but Old English ''spelt'', and Late Latin ''spelda''
 
 ====Pronunciation====
 * {{IPA|/'spεlt/}}
-* Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
+* {{rhymes|ɛlt}}
 
 ====Noun====
 {{en-noun|-}}
