--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -64,6 +64,12 @@
 
 ----
 
+==Middle Chinese==
+===Han character===
+'''映''' (*[[qiæ̀ng]])<!--note: asterisk indicates that this character occurs more than four times in the Tang Dynasty corpus of literature-->
+
+----
+
 ==Vietnamese==
 ===Han character===
 '''映''' ([[ánh]])
