--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -2,10 +2,10 @@
 ==Translingual==
 
 ===Etymology===
-Shorthand for [[丨]] (one) + [[日]] (day), representing the day before today (the past)
+Shorthand for [[〡]] (one) + [[日]] (day), representing the day before today (the past)
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=中日 (LA)|ids=⿰[[丨]][[日]]}}
+{{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=中日 (LA)|ids=⿰[[〡]][[日]]}}
 
 # [[old]], [[ancient]]
 # [[former]], [[past]]
