--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -32,6 +32,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-top|playful activity}}
 * Albanian: [[lojë]] {{f}}
 * Arabic: {{t+|ar|لعبة|f|sc=Arab}}
+* Armenian: [[խաղ]] (xaġ)
 * [[Catalan]]: [[joc]] {{m}}
 * Croatian: {{t+|hr|igra|f}}
 * Czech: {{t+|cs|hra|f}}
@@ -69,6 +70,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 
 {{trans-top|theatrical performance}}
 * Arabic: {{Arab|[[مسرح]]}} (másraħ) {{m}}, {{Arab|[[مسرحية]]}} {{IPAchar|(masraħíyya)}} {{f}}
+* Armenian: [[ներկայացում]] (nerkayac'um)
 * [[Catalan]]: [[obra]] {{f}}
 * Chinese: [[戲劇]], [[戏剧]] (xìjù), [[话剧]] (huàjù)
 * Czech: {{t+|cs|hra|f}}
