--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -52,7 +52,10 @@
 
 ==Vietnamese==
 ===Han character===
-'''昱''' [[dục]])<!--for some reason this character is not in the Nom Foundation database-->
+{{vi-hantu|[[dục]]}}
+
+
+<!--for some reason this character is not in the Nom Foundation database-->
 
 [[fr:昱]]
 [[vi:昱]]
