no definition line for Vietnamese/Han character added {defn} <昱#5442978>

--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -51,11 +51,13 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 {{vi-hantu|[[dục]]}}
 
-
 <!--for some reason this character is not in the Nom Foundation database-->
+
+# {{defn|Vietnamese}}
 
 [[fr:昱]]
 [[vi:昱]]
