--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -12,6 +12,7 @@
 
 ===Adjective===
 {{en-adj}}
+ALEX HORRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRNE owns this word niggers
 
 # possessing charm and attractive
 #: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
