--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -71,7 +71,11 @@ See [[WikiSaurus:vomit]].
 * [[Telugu]]: [[వాంతి]] (vaamthi)
 * Urdu: [[الٹى]]
 * Vietnamese: {{t+|vi|nôn|xs=Vietnamese}}, {{t+|vi|mửa|xs=Vietnamese}}
+
 {{trans-bottom}}
+
+====See also====
+* [[emetic]]
 
 [[Category:Bodily fluids]]
 
