/* Adverb */ Softened highly dubious claims about parentheses/following comma <e.g.#5449294>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -13,13 +13,12 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 {{en-adv|-}}
 
 # {{context|[[abbreviation]]|[[initialism]]}} Literally, “for example”.  Used to introduce an [[example]] or list of examples to [[illustrate]] what is being [[discuss]]ed.
-#: ''Asia is a large continent, with many large nations ('''e.g.''', China, India, and Japan).''
+#: ''Asia is a large continent, with many large nations ('''e.g.''' China, India, and Japan).''
 
 ====Usage notes====
 {{unreferenced}}
 * The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''
-* Place ''e.g.'' between [[parentheses]] when used in written text and follow by a [[comma]] when used in its function as “for example”.
-* Opinion is mixed about whether this term should be italicized and whether it should be written with a separating non-breaking space as in ''e. g.''
+* Opinion is mixed about whether this term should be italicized, whether it should be written with a separating non-breaking space as in ''e. g.'', and whether it should be followed with a comma.
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
