--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -9,7 +9,7 @@
 ===Noun===
 {{en-noun|s|-}}
 
-# {{countable}} A hardened rectangular block of [[mud]], [[clay]], etc, used for building.
+# {{countable}} A hardened rectangular block of [[mud]], [[clay]], etc., used for building.
 #: ''This house is made of '''bricks'''''.
 # {{uncountable}} Considered collectively, as a building material.
 #: ''This house is made of '''brick'''''.
@@ -21,7 +21,7 @@
 #* {{quote-book|year=1906|author=Edith Nesbit|title=[[w:The Railway Children|The Railway Children]]|url=http://books.google.com/books?id=tLVPkFHLEZMC&pg=PA168&dq=%22you%27re+a+brick%22&as_brr=3&sig=bMkcYZ4ym_R-anlb_W206onJOf4|page=168|passage=‘Somebody had to stay with you,’ said Bobbie.<br>‘Tell you what, Bobbie,’ said Jim, ‘you’re a '''brick'''. Shake.’}}
 #* {{quote-book|year=1960|author=W.W. Jacobs|title=Cargoes|url=http://books.google.com/books?id=o2tFTib3eGQC&pg=PA45&dq=%22you%27re+a+brick%22+date:1940-1990&lr=&as_brr=3&sig=GQAlsIu4mx0WPYYdARw7Wxnbg9k|isbn=0828314306|page=45|passage=“Well, I’ll do what I can for you,” said the seaman, …“If you were only shorter, I'd lend you some clothes.”<br>“You're a '''brick''',” said the soldier gratefully.}}
 # {{technology|slang}} An electronic device, especially a heavy box-shaped one, that has become non-functional or obsolete.
-# {{basketball}} A shot which misses, particularly one which bounces directly out of the basket because of a too-flat trajectory. as if the ball were a heavy object.
+# {{basketball}} A [[shot]] which misses, particularly one which bounces directly out of the basket because of a too-flat trajectory, as if the ball were a heavy object.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
 # {{informal}} A [[power brick]]; an external [[power supply]] consisting of a small box with an integral [[male]] [[power plug]] and an attached [[electric cord]] terminating in a power plug.
 
@@ -97,6 +97,7 @@
 {{trans-top|a building material}}
 * Chinese traditional/simplified: [[磚塊]], [[砖块]] (zhuān kuài), [[磚頭]], [[砖头]] (zhuān tóu)
 * Danish: [[mursten]] {{c}}
+* Dutch: [[baksteen]], [[bakstenen]]
 * Finnish: {{t+|fi|tiili}}
 * Icelandic: [[múrsteinn]] {{m}}, [[byggingarklossar]] {{m|p}}, [[byggingarkubbar]] {{n|p}}
 {{trans-mid}}
@@ -105,9 +106,10 @@
 * Swedish: {{t-|sv|tegel|n}}
 {{trans-bottom}}
 
-{{trans-top|term of endearment}}
+{{trans-top|term for a helpful, reliable person}}
 * Chinese traditional/simplified: [[好心腸]]的, [[好心肠]]的 (hǎo xīn cháng de)
 * Danish: [[sveske]] {{c}}, [[knag]] {{c}}
+* Dutch: [[kanjer]]
 {{trans-mid}}
 * Icelandic: [[ágætis manneskja]] {{f}}, [[perla af manni]] {{f}}, [[fyrirtaks manneskja]] {{f}}
 {{trans-bottom}}
@@ -116,7 +118,6 @@
 * {{ttbc|Afrikaans}}: [[baksteen]]
 * {{ttbc|Arabic}}: [[طوبة]] (ṭūbah)
 * {{ttbc|Breton}}: [[brikenn]] {{f}} -où
-* {{ttbc|Dutch}}: [[baksteen]]
 * {{ttbc|French}}: [[brique]] {{f}} (1,2)
 * {{ttbc|Ido}}: [[briko]]
 * {{ttbc|Indonesian}}: [[bata]], [[batu bata]]
@@ -144,6 +145,7 @@
 ====Translations====
 {{trans-top|made of brick}}
 * Danish: [[mursten]]s-
+* Dutch: [[bakstenen]]
 * Estonian: {{t|et|telliskivi-}}
 * Icelandic: [[úr múrsteini]] {{m|f|n}}
 {{trans-mid}}
@@ -174,6 +176,11 @@
 * [[brick in]]
 * [[brick over]]
 * [[brick up]]
+
+====Translations====
+{{trans-top|make into brick}}
+* Dutch: tot bakstenen [[bakken]]
+{{trans-bottom}}
 
 ===See also===
 * [[brickfielder]]
