--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -27,6 +27,7 @@
 * Finnish: [[takertua]], [[tarrautua]]
 * French: [[accrocher]], s'accrocher, [[coller]], se coller
 * [[Galician]]: [[soster]], [[agarrar]] or [[suxeitar]]
+* German: [[haften]], [[klammern]]
 * Indonesian: [[sangkut|menyangkut]], [[sangkut|menyangkutkan]], [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
 {{mid}}
 * Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>
