--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -48,6 +48,7 @@
 ====Translations====
 {{trans-top|person}}
 * [[Catalan]]: [[europeu]] {{m}} [[europea]] {{f}}
+* Croatian: {{t|hr|Europljanin|alt=Európljanin|m}}, {{t|hr|Europljanka|alt=Európljānka|f}}, {{t|hr|Europejac|alt=Européjac|m}}
 * Czech: [[Evropan]] {{m}}
 * Dutch: [[Europeaan]]
 * Esperanto: [[Eŭropano]]
