--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -19,6 +19,7 @@
 ====Translations====
 {{trans-top|related to Europe or the European Union}}
 * [[Catalan]]: [[europeu]] {{m}}, [[europea]] {{f}}
+* Croatian: {{t|hr|europski|alt=èuropskī}}
 * Czech: [[evropský]] {{m}}
 * Dutch: [[Europees]]
 * Esperanto: [[eŭropa]]
