--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old High German]] "''fleisk''".
+Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old High German]] "''fleisk''", [[Modern High German]] "''fleisch''".
 
 ===Pronunciation===
 * {{audio|en-us-flesh.ogg|Audio (US)}}
