/* Pronunciation */ rhymes template <choose#5467555>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -7,7 +7,7 @@ From {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
 ===Pronunciation===
 * {{enPR|cho͞oz}}, {{IPA|/tʃuːz/}}, {{SAMPA|/tSu:z/}}
 *: {{audio|en-us-choose.ogg|Audio (US)}}
-*: [[Rhymes:English:-uːz|Rhymes:-uːz]]
+*: {{rhymes|uːz}}
 * {{homophones|chews}}
 
 ===Verb===
