/* Translations */ +gd, sco, -fy (as raisin moved to raisin) <plum#5468785>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -168,7 +168,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Polish: {{t+|pl|śliwka|f}}
 * Portuguese: {{t+|pt|ameixa|f}}
 * Russian: {{t+|ru|слива|f|tr=slíva|sc=Cyrl}}
-* [[Scots]]: [[ploum]]
+* [[Scots]]: [[ploom]], [[ploum]]
+* [[Scottish Gaelic]]: {{t-|gd|plumas|m}}
 * Serbian:
 *: Cyrillic: [[шљива#Serbian|шљива]] {{f}}
 *: Roman: [[šljiva#Serbian|šljiva]] {{f}}
@@ -206,6 +207,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Polish: {{t|pl|śliwa|f}}
 * Portuguese: {{t+|pt|ameixeira|f}}, {{t+|pt|ameixa|f}}
 * Russian: {{t+|ru|слива|f|tr=slíva|sc=Cyrl}}
+* [[Scots]]: [[ploom]], [[ploum]]
+* [[Scottish Gaelic]]: {{t-|gd|plumas|m}}
 * Serbian:
 *: Cyrillic: [[шљива#Serbian|шљива]] {{f}}
 *: Roman: [[šljiva#Serbian|šljiva]] {{f}}
@@ -234,8 +237,6 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-bottom}}
 
 {{trans-top|See [[raisin]]}}
-* [[West Frisian]]: {{t+|fy|rezyn|xs=West Frisian}}
-{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|(''slang'') testicle}}
