template -see +also <春#5468994>

--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -1,4 +1,4 @@
-{{see|萅}}
+{{also|萅}}
 ==Translingual==
 
 ===Han character===
@@ -80,7 +80,7 @@
 ==Mandarin==
 
 ===Pronunciation===
-*{{audio|zh-chūn.ogg|audio}}
+* {{audio|zh-chūn.ogg|audio}}
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[chūn]] ([[chun1]])|wg=ch'un<sup>1</sup>}}
@@ -154,6 +154,7 @@
 * [[春装]]
 
 [[Category:Mandarin entries with audio links]]
+
 ----
 
 ==Vietnamese==
