/* Etymology 1 */ oops <count#5474687>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -68,7 +68,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 =====Derived terms=====
 * [[count out]]
 
-=====Related terms====
+=====Related terms=====
 * [[compute]]
 
 =====Translations=====
