iwiki +th <come#5480144>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -258,6 +258,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[sv:come]]
 [[ta:come]]
 [[te:come]]
+[[th:come]]
 [[vi:come]]
 [[tr:come]]
 [[uk:come]]
