--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -16,6 +16,8 @@ Old English ''[[sūcan]]''
 # {{colloquial}} Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.
 #: ''You're great at baseball, but you '''suck''' at golf.''
 # To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation.
+#: ''Come on, bitch, '''suck''' it.''
+#: You know you want to '''suck''' me '''off'''.''
 
 ====Synonyms====
 * (3, 4 above) To [[blow]]
