iwiki +th <push#5486052>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -182,6 +182,7 @@ From {{etyl|fro}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{etyl|la}} ''[
 [[fi:push]]
 [[ta:push]]
 [[te:push]]
+[[th:push]]
 [[vi:push]]
 [[tr:push]]
 [[zh:push]]
